# BetterUnrealClaude

./: .gitignore  README.md
.github/: FUNDING.yml
.github/workflows/: package-release.yml  update-sponsors.yml  validate.yml
UnrealClaude/: .mcp.json  UnrealClaude.uplugin
UnrealClaude/Resources/: mcp-config.json
UnrealClaude/Resources/mcp-bridge/: Cargo.toml  index.js
UnrealClaude/Resources/mcp-bridge/contexts/: actor.md  animation.md  assets.md  blueprint.md  blueprint_workflow.md  character.md  enhanced_input.md  material.md  replication.md  slate.md
UnrealClaude/Resources/mcp-bridge/src/: config.rs  context.rs  main.rs  unreal.rs
UnrealClaude/Resources/terminal/: index.html
UnrealClaude/Source/UnrealClaude/: UnrealClaude.Build.cs
UnrealClaude/Source/UnrealClaude/Private/: AnimationBlueprintUtils.cpp  BehaviorTreeEditor.cpp  BehaviorTreeEditor.h  BlueprintEditor.cpp  BlueprintEditor.h  BlueprintGraphEditor.cpp  BlueprintGraphEditor.h  BlueprintNodeSearcher.cpp  BlueprintNodeSearcher.h  BlueprintUtils.cpp  BlueprintUtils.h  ClaudeCodeRunner.cpp  ClaudeEditorWidget.cpp  ClaudeTerminalServer.cpp  ClaudeTerminalServer.h  SClaudeTerminalWidget.cpp  SClaudeTerminalWidget.h  ScriptExecutionManager.cpp  UnrealClaudeCommands.cpp  UnrealClaudeModule.cpp
UnrealClaude/Source/UnrealClaude/Private/MCP/: MCPHelpers.cpp  MCPHelpers.h  MCPParamValidator.cpp  MCPToolBase.h  MCPToolRegistry.cpp
UnrealClaude/Source/UnrealClaude/Public/: ClaudeEditorWidget.h  IClaudeRunner.h  ScriptExecutionManager.h  UnrealClaudeCommands.h  UnrealClaudeModule.h
(+35 files in other folders)
