[package]
name = "ue5-mcp-server"
version = "1.4.0"
edition = "2021"
description = "MCP bridge between Claude Code and Unreal Engine 5"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
